// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializeProviders should initialize default wallets with default node configuration 1`] = `
[
  "pera",
  "myalgo",
  "defly",
  "exodus",
  "algosigner",
  "walletconnect",
]
`;

exports[`initializeProviders should initialize specified wallets only 1`] = `
[
  "pera",
  "defly",
]
`;
